修改输入框样式，多数叠层天赋默认值为满层

--- a/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
+++ b/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
@@ -18,7 +18,7 @@
 <body>
   <h1 class="title">全境封锁2武器伤害计算器</h1>
   <div class="tips" id="Tips">
-    <p>输入框直接输入数值，无需输入百分号，武器精通等级同上，例如5级直接输入数字5，数值以<span style="color: red;">"角色面板"</span>为准，查看数据时请用<span
+    <p>输入框直接输入数值，无需输入百分号，数值以<span style="color: red;">"角色面板"</span>为准，查看数据时请用<span
         style="color: red;">"G"</span>切换为当前武器</p>
     <p>武器基础白字是无任何增伤，武器原本的伤害。请在游戏中开启<span style="color: red;">"显示基础伤害"</span>查看</p>
     <p>计算结果有些许偏差是正常的</p>
