--- a/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
+++ b/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
@@ -18,8 +18,8 @@
 <body>
   <h1 class="title">全境封锁2武器伤害计算器</h1>
   <div class="tips" id="Tips">
-    <p>输入框直接输入数值，无需输入百分号，数值以<span style="color: red;">"角色面板"</span>为准，查看数据时请用<span
-        style="color: red;">"G"</span>切换为当前武器</p>
+    <p>输入框直接输入数值，无需输入百分号，数值以<span style="color: red;">"角色面板"</span>为准，查看数据时请用<span style="color: red;">"G"</span>切换为当前武器
+    </p>
     <p>武器基础白字是无任何增伤，武器原本的伤害。请在游戏中开启<span style="color: red;">"显示基础伤害"</span>查看</p>
     <p>计算结果有些许偏差是正常的</p>
     <p>只有在考虑对机械单位时才勾选<span style="color: red;">"技师--拆解"</span>，机械单位并不吃装甲伤，也不会进掩体，所以隐藏多数计算结果只显示已计算生命值/掩体伤的非暴击害/暴击伤害</p>
@@ -134,6 +134,11 @@
             <input @click="ChAbsorbed" type="checkbox">
             <span>专注</span>
             <input id="checkboxinput" v-show="TWD.Absorbed" v-model="AbsorbedC" type="text" />
+          </div>
+          <div>
+            <input @click="ChPAbsorbed" type="checkbox">
+            <span>完美专注</span>
+            <input id="checkboxinput" v-show="TWD.PAbsorbed" v-model="PAbsorbedC" type="text" />
           </div>
           <div>
             <input @click="ChGlassCannon" type="checkbox">
@@ -349,32 +354,32 @@
         <br />
         <div v-if="detailed">
           <h1>{{HSUMNAME}}:<br>{{HSum | numberToCurrency}}</h1>
-          <h2>暴击:{{HSumB | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">爆头:{{HSumH | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">头部暴击:{{HSumHB | numberToCurrency}}</h2>
+          <h2>暴击:<span style="color: rgb(255, 84, 5);">{{HSumB | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">爆头:<span style="color: red;">{{HSumH | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">头部暴击:<span style="color: orange;">{{HSumHB | numberToCurrency}}</span></h2>
           <h2 v-if="TechnicianDismantlingTag">对离开掩体目标伤害:<br>{{HSumOC | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标暴击:<br>{{HSumBOC | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标爆头:<br>{{HSumHOC | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标头部暴击:<br>{{HSumHBOC | numberToCurrency}}</h2>
-          <h1 v-if="TechnicianDismantlingTag">对护甲值目标伤害:<br>{{ASum | numberToCurrency}}</h1>
-          <h2 v-if="TechnicianDismantlingTag">暴击:{{ASumB | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">爆头:{{ASumH | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">头部暴击:{{ASumHB | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标伤害:<br>{{ASumOC | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标暴击:<br>{{ASumBOC | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标爆头:<br>{{ASumHOC | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标头部暴击:<br>{{ASumHBOC | numberToCurrency}}</h2>
+          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标暴击:<br><span style="color: rgb(255, 84, 5);">{{HSumBOC | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标爆头:<br><span style="color: red;">{{HSumHOC | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标头部暴击:<br><span style="color: orange;">{{HSumHBOC | numberToCurrency}}</span></h2>
+          <h1 v-if="TechnicianDismantlingTag">对护甲值目标伤害:<br><span style="color: rgb(13, 146, 255);">{{ASum | numberToCurrency}}</span></h1>
+          <h2 v-if="TechnicianDismantlingTag">暴击:<span style="color: rgb(255, 84, 5);">{{ASumB | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">爆头:<span style="color: red;">{{ASumH | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">头部暴击:<span style="color: orange;">{{ASumHB | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标伤害:<br><span style="color: rgb(13, 146, 255);">{{ASumOC | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标暴击:<br><span style="color: rgb(255, 84, 5);">{{ASumBOC | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标爆头:<br><span style="color: red;">{{ASumHOC | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">对离开掩体目标头部暴击:<br><span style="color: orange;">{{ASumHBOC | numberToCurrency}}</span></h2>
         </div>
         <div v-if="concise">
           <h1>{{HSUMNAME}}:{{HSumOC | numberToCurrency}}</h1>
-          <h2>暴击:{{HSumBOC | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">爆头:{{HSumHOC | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">头部暴击:{{HSumHBOC | numberToCurrency}}</h2>
+          <h2>暴击:<span style="color: rgb(255, 84, 5);">{{HSumBOC | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">爆头:<span style="color: red;">{{HSumHOC | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">头部暴击:<span style="color: orange;">{{HSumHBOC | numberToCurrency}}</span></h2>
           <br>
-          <h1 v-if="TechnicianDismantlingTag">对护甲值目标伤害:<br>{{ASumOC | numberToCurrency}}</h1>
-          <h2 v-if="TechnicianDismantlingTag">暴击:{{ASumBOC | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">爆头:{{ASumHOC | numberToCurrency}}</h2>
-          <h2 v-if="TechnicianDismantlingTag">头部暴击:{{ASumHBOC | numberToCurrency}}</h2>
+          <h1 v-if="TechnicianDismantlingTag">对护甲值目标伤害:<span style="color: rgb(13, 146, 255);">{{ASumOC | numberToCurrency}}</span></h1>
+          <h2 v-if="TechnicianDismantlingTag">暴击:<span style="color: rgb(255, 84, 5);">{{ASumBOC | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">爆头:<span style="color: red;">{{ASumHOC | numberToCurrency}}</span></h2>
+          <h2 v-if="TechnicianDismantlingTag">头部暴击:<span style="color: orange;">{{ASumHBOC | numberToCurrency}}</span></h2>
         </div>
       </div>
     </div>
@@ -395,4 +400,5 @@
   </div>
 </body>
 <script src="js/Tom Clancys The Division 2.js" type="text/javascript"></script>
+
 </html>
