新增完美投机取巧

--- a/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
+++ b/Tom-Clancys-The-Division-2-Injury-calculation-tool/index.html
@@ -202,6 +202,10 @@
             <span>投机取巧</span>
           </div>
           <div>
+            <input @click="ChPOpportunistic" type="checkbox">
+            <span>完美投机取巧</span>
+          </div>
+          <div>
             <input @click="ChUnstoppableForce" type="checkbox">
             <span>无人能挡的力量</span>
             <input id="checkboxinput" v-show="TWD.UnstoppableForce" v-model="UnstoppableForceC" type="text" />
