修复猎人怒火伤害计算逻辑

--- a/Division2DC/index.html
+++ b/Division2DC/index.html
@@ -309,7 +309,7 @@
           <div>
             <input @click="ChHunterRage" type="checkbox">
             <span>猎人怒火(层数)</span>
-            <input id="checkboxinput" v-show="TWD.HunterRage" v-model="HunterRageC" type="text" />
+            <input id="checkboxinput" v-show="MD.HunterRage" v-model="HunterRageC" type="text" />
           </div>
           <div>
             <input @click="ChHunterRages" type="checkbox">
