删除'阿基里斯的多余计算'

--- a/Division2DC/index.html
+++ b/Division2DC/index.html
@@ -24,7 +24,7 @@
       width: 100%;
     }
   </style>
-  <title>全境封锁2伤害计算器2.0 By-MuFen</title>
+  <title>全境封锁2伤害计算器V-2</title>
 </head>
 <body>
   <h1 class="title">全境封锁2武器伤害计算器</h1>
