--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>全境封锁2伤害计算器2.0 By-MuFen</title>
+    <title>全境封锁2伤害计算器V2 By-MuFen</title>
   </head>
   <body>
     <noscript>
